# memoryos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  newplan.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  dependency-update.yml  docs.yml  nightly.yml  pr-validation.yml  release.yml  security.yml
apps/flutter_app/: analysis_options.yaml  l10n.yaml  pubspec.yaml
apps/flutter_app/android/: build.gradle  settings.gradle
apps/flutter_app/android/app/: build.gradle  build.gradle.kts
apps/flutter_app/android/app/src/main/: AndroidManifest.xml
apps/flutter_app/android/app/src/main/kotlin/com/example/memoryos/: MainActivity.kt
apps/flutter_app/integration_test/: app_test.dart
apps/flutter_app/ios/Runner/: Info.plist
apps/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/lib/: main.dart
apps/flutter_app/lib/app/: app.dart
apps/flutter_app/lib/core/blocs/: app_blocs.dart
apps/flutter_app/lib/core/di/: service_locator.dart
apps/flutter_app/lib/core/domain/: entities.dart  ffi_repositories.dart  repositories.dart
apps/flutter_app/lib/core/ffi/: rust_ffi.dart  rust_ffi_real.dart  rust_ffi_stub.dart
apps/flutter_app/lib/core/router/: app_router.dart
apps/flutter_app/lib/core/theme/: app_theme.dart
apps/flutter_app/lib/core/widgets/: command_palette.dart  file_insights.dart  quick_actions.dart  shared_widgets.dart  storage_intelligence.dart
apps/flutter_app/lib/features/chat/pages/: chat_page.dart
apps/flutter_app/lib/features/collections/pages/: collections_page.dart
apps/flutter_app/lib/features/duplicates/pages/: duplicates_page.dart
apps/flutter_app/lib/features/file_detail/pages/: file_detail_page.dart
apps/flutter_app/lib/features/galaxy/pages/: galaxy_page.dart
apps/flutter_app/lib/features/home/pages/: home_page.dart
apps/flutter_app/lib/features/inbox/pages/: inbox_page.dart
apps/flutter_app/lib/features/learning/pages/: learning_page.dart
apps/flutter_app/lib/features/models/pages/: models_page.dart
apps/flutter_app/lib/features/onboarding/pages/: onboarding_page.dart
apps/flutter_app/lib/features/search/pages/: search_page.dart
apps/flutter_app/lib/features/settings/bloc/: settings_bloc.dart
apps/flutter_app/lib/features/settings/pages/: settings_page.dart
apps/flutter_app/lib/features/shell/: shell_page.dart
apps/flutter_app/lib/features/timeline/pages/: timeline_page.dart
apps/flutter_app/lib/features/toolbox/pages/: toolbox_page.dart
apps/flutter_app/lib/features/vault/pages/: vault_page.dart
apps/flutter_app/linux/: CMakeLists.txt
apps/flutter_app/linux/flutter/: generated_plugins.cmake
apps/flutter_app/linux/runner/: my_application.cc
apps/flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter_app/test/: blocs_repositories_test.dart  core_test.dart  coverage_booster_test.dart  ffi_repositories_full_test.dart  ffi_repository_test.dart  import_bloc_test.dart  service_locator_test.dart
apps/flutter_app/test/core/domain/: entities_test.dart  repositories_test.dart
apps/flutter_app/test/core/ffi/: rust_ffi_test.dart
apps/flutter_app/web/: index.html  manifest.json
apps/flutter_app/windows/: CMakeLists.txt
apps/flutter_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
apps/flutter_app/windows/runner/: Runner.rc  main.cpp
automation/: benchmark.ps1  bootstrap.ps1  build-all.ps1  build.ps1  clean.ps1  coverage.ps1  feature-audit.ps1  gap-analysis.ps1  generate-dataset.ps1  generate-reports.ps1  install-local.ps1  package.ps1  quality-gate.ps1  release.ps1  smoke-test.ps1  test-all.ps1  test.ps1  validate.ps1
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: categorizer.rs  chat.rs  embedder.rs  error.rs  lib.rs  model_manager.rs  summarizer.rs  types.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: config.rs  crypto.rs  database.rs  error.rs  ffi.rs  file_monitor.rs  lib.rs  metadata.rs  models.rs  toolbox.rs
crates/core-engine/src/sql/: schema.sql
crates/duplicate-engine/: Cargo.toml
crates/duplicate-engine/src/: error.rs  lib.rs  phash.rs  types.rs
crates/ocr-engine/: Cargo.toml
crates/ocr-engine/src/: error.rs  lib.rs  paddle.rs  tesseract.rs  types.rs
crates/search-engine/: Cargo.toml
crates/search-engine/src/: error.rs  fts.rs  lib.rs  types.rs  vector.rs
docker/android/: Dockerfile
docker/builder/: Dockerfile
docker/docs/: Dockerfile
docker/flutter/: Dockerfile
docker/tester/: Dockerfile
docs/: index.md
docs/architecture/: system-architecture.md
docs/deployment/: local-development.md
docs/design/: database-design.md
docs/project/: changelog.md  roadmap.md
docs/requirements/: business-requirements.md  functional-requirements.md  non-functional-requirements.md
docs/security/: encryption-guide.md  privacy-model.md  threat-model.md
docs/testing/: test-strategy.md
docs/user-guide/: faq.md  getting-started.md
features/: ai.yaml  automation.yaml  collections.yaml  converter.yaml  dashboard.yaml  duplicates.yaml  knowledge_graph.yaml  learning.yaml  ocr.yaml  preview.yaml  search.yaml  settings.yaml  storage.yaml  timeline.yaml  vault.yaml
scripts/: bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  build_all.ps1  build_docker.ps1  coverage.sh  generate_automation_scripts.py  generate_feature_registry.py  lint.sh  test.ps1  test.sh  verify_readiness.py
tests/integration/: pipeline_test.rs
