[workspace]
members = [
    "crates/core-engine",
    "crates/ocr-engine",
    "crates/search-engine",
    "crates/ai-engine",
    "crates/duplicate-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MemoryOS Contributors"]
license = "Apache-2.0"
repository = "https://github.com/your-org/memoryos"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing / Crypto
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"

# Random (crypto-safe)
getrandom = "0.2"

# File system monitoring
notify = { version = "6.1", features = ["serde"] }

# Parallel processing
rayon = "1.8"
crossbeam-channel = "0.5"

# HTTP (for model download)
reqwest = { version = "0.11", features = ["stream", "json"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
