[package]
name = "memoryos-ai-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ai_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
