[package]
name = "memoryos-core-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "core_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.9"
