[package]
name = "memoryos-core-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
[lints]
workspace = true

[lib]
name = "core_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
getrandom = "0.2"
notify = { version = "6.1", features = ["serde"] }
rayon = "1.8"
crossbeam-channel = "0.5"
zip = { workspace = true }
image = "0.24"
memoryos-duplicate-engine = { path = "../duplicate-engine" }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.9"
