[package]
name = "memoryos-duplicate-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
[lints]
workspace = true

[lib]
name = "duplicate_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
image = "0.24"
hex = "0.4"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.9"
