[package]
name = "memoryos-ocr-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ocr_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
image = "0.24"
base64 = "0.21"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.9"
