[package]
name = "memoryos-search-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "search_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.9"
